feat: add support for fetching and searching localities (SIMC) through TERYT SOAP API
- Introduced `SimcService` for interacting with SIMC-related endpoints using TERYT SOAP API.
- Added methods in `TerytClientImpl` and `SimcService` for fetching localities by municipality, administrative type, and name.
- Enhanced domain models (`Miejscowosc`, `RodzajMiejscowosci`, and `StanSimc`) to support locality data mapping.
- Updated `TerytMapper` to map SOAP responses to locality models.
- Added WireMock tests (`SimcServiceWireMockTest`) and XML mocks for validating SIMC API integration.
- Extended integration tests (`TerytClientIntegrationTest`) to verify locality data retrieval functionalities.
- Updated `TerytAutoConfiguration` to register `SimcService`.